styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    list-style: none;
    text-decoration: none;
    font-family: 'Playfair Display';
    font-weight: lighter;
    color: #fff;
}
body {
    height: 100dvh;
    display: flex;
    flex-direction: column;
    overflow-x: hidden;
    animation: load 1s ease 0.5ms;
    gap: 5em;
}
@keyframes load {
    from {
        opacity: 0;
        transform: translateY(200%);
    }
    50% {
    opacity: 0.5;
    }
    to {
        transform: translateY(0);
        opacity: 1;
    }
}
main {
    display: flex;
    justify-content: center;
    flex-direction: column;
}
.hero_section {
    position: relative;
    display: flex;
    justify-content: center;
}
.hero_section::after {
    content: " ";
    position: absolute;
    top: -35%;
    height: 115dvh;
    width: 120dvw;
    z-index: -1;
    background: linear-gradient(78deg, #029452a9, #8000ff8a, #0065a4b9);
    transform: skewY(-12deg);
}
.hero_content {
    display: flex;
    width: 90dvw;
    flex-wrap: wrap;
    align-items: center;
    padding: 2rem 0;
    z-index: 2;
}
.hero_image_and_title {
    position: relative;
    flex: 2.5;
}
.hero_image_and_title picture {
    display: block;
    width: 100%;
    height: 90dvh;
    min-width: 250px;
    min-height: 300px;
}
.hero_image_and_title picture img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}
.hero_image_and_title p.title {
    position: absolute;
    bottom: 6%;
    color: #ffffff;
    left: 10%;
    font-size: 2.6rem;
}
.hero_text {
    flex: 3;
    display: flex;
    flex-direction: column;
    justify-content: center;
    background-color: #fff;
    box-shadow: 0 2px 15px #b0b0b0;
    padding: 0.8em 2em;
    gap: 1em;
}

.hero_text h1 {
    color: #000;
    font-size: 2.5rem;
    
}
.hero_text > p.about_description {
    font-size: 1.3rem;
    color: #565555;
    font-family: 'Roboto', sans-serif;
}
ul.hero_socials {
    display: flex;
    gap: 0.5em;
    align-self: flex-end;
    padding: 2em 0.5em 0 0;
}
ul.hero_socials li {
    font-size: 2rem
}
.project_section {
    display: flex;
    flex-direction: column;
    align-self: center;
    gap: 1em;
}
ul.projects {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    grid-template-rows: repeat(auto-fit, minmax(250px, 1fr));
    /* grid-auto-rows: 1fr; */
    gap: 2em;
    z-index: 2;
    width: 80dvw;
}
.project_section h2 {
    font-size: 3rem;
    color: #000; 
}
ul.projects li {
    display: flex;
    flex-direction: column;
    z-index: 2;
    &:hover {
        transform: translateY(2%) scale(1.03);
    }
}
ul.projects > li > picture > img {
    object-fit: cover;
    height: 100%;
    width: 100%;
}
ul.projects .project_info_section {
    flex: 1;
    box-shadow: 0 0 5px #858585;
    padding: 2em 1em 3em;
    display: flex;
    flex-direction: column;
    gap: 1em;
}
ul.projects .project_info_section h3 {
    color: #000;
}
ul.projects .project_description {
    font-family: 'Roboto';
    color: #565555;
}
.project_title_and_links {
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.project_title_and_links > .links {
    flex: 2;
    display: flex;
    justify-content: flex-end;
    gap: 1em;
}
.project_title_and_links > .links li {
    font-size: 1.5rem;
}
.project_title_and_links > .links svg {
    height: 30px;
    width: 30px;
}
footer {
    display: flex;
    background: linear-gradient(78deg, #029452a9, #8000ff8a, #0065a4b9);
    flex-wrap: wrap;
    padding: 4em 0;
}

footer > section.contacts {
    flex: 0.7;
    display: flex;
    flex-direction: column;
    gap: 1em;
    font-size: 1.5rem;
    padding: 2em;
}
footer > section.contacts > div.contact_info {
    display: flex;
    gap: 1em;
    flex-direction: column;
    color: #fff;
}
footer > section.contacts > div.contact_info  p,
footer > section.contacts > div.contact_info  a {
    width: 30ch;
    font-family: 'Roboto';
    font-weight: 100;
}
footer .contact_info div {
    display: flex;
    gap: 0.4em;
    align-items: center;
}
footer .contact_info div > svg {
    width: 30px;
    height: 30px;
    fill: #fff;
}
footer div.contact_info+div {
    display: flex;
}
footer .footer_socials {
    display: flex;
    gap: 1em;
    justify-self: flex-start;
}

footer .footer_socials > li {
    font-size: 2.5rem;
}
footer > section.contact_picture {
    flex: 1;
    padding: 2em;
}
footer picture {
    display: block;
    width: 100%;
}

footer picture img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}
@media(max-width: 1000px) {
    .hero_content {
        flex-direction: column;
    }
    .hero_image_and_title {
        width: 100%;
    }
    .hero_image_and_title p.title {
        bottom: 1%;
        font-size: 5rem;
    }
}
@media(max-width: 600px) {
    .hero_image_and_title {
        width: 90%;
        flex: 0.5;
    }
    .hero_text {
        box-shadow: none;
        width: 100%;
    }
    .hero_image_and_title p.title {
        font-size: 3.5em;
    }
    ul.hero_socials {
        width: 100%;
        justify-content: center;
    }
    footer {
        flex-direction: column;
        padding: 0;
    }
    footer > section.contacts {
        padding: 0;
        width: 100%;
        align-items: center;
    }
    footer > section.contacts > div.contact_info {
        width: 100%;
        align-items: center;
    }
    footer > section.contacts > div.contact_info p,
    footer > section.contacts > div.contact_info a {
        font-size: 1.16rem;
    }
    footer > section.contact_picture {
        width: 100%;
        padding: 0;
    }
    footer picture {
        width: 100%;
    }
}

